Add new files and rename files.
Rename Class1.cs in MyersTriangle.Test project to TriangleTest.cs .
Rename Class1.cs in MyersTriangle project to TriangleType.cs .
Add Triangle.cs in MyersTriangle project.

diff --git a/MyersTriangle.Test/Class1.cs b/MyersTriangle.Test/Class1.cs
deleted file mode 100644
index e51b5e3..0000000
--- a/MyersTriangle.Test/Class1.cs
+++ /dev/null
@@ -1,11 +0,0 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Text;
-
-namespace MyersTriangle.Test
-{
-    public class Class1
-    {
-    }
-}
diff --git a/MyersTriangle.Test/MyersTriangle.Test.csproj b/MyersTriangle.Test/MyersTriangle.Test.csproj
index bcefb59..ff9ad82 100644
--- a/MyersTriangle.Test/MyersTriangle.Test.csproj
+++ b/MyersTriangle.Test/MyersTriangle.Test.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>d3ec6308-7cd0-418e-97c6-a5fa4fd0830e</ProjectGuid>
+    <ProjectGuid>{E1B5F054-ED84-449C-B1CF-BF923C383F1D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MyersTriangle.Test</RootNamespace>
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,9 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="TriangleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyersTriangle\MyersTriangle.csproj">
+      <Project>{F3B5A0F7-1164-4BA1-85C9-E844C8AD11CE}</Proj

--- a/MyersTriangle.Test/MyersTriangle.Test.csproj
+++ b/MyersTriangle.Test/MyersTriangle.Test.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>d3ec6308-7cd0-418e-97c6-a5fa4fd0830e</ProjectGuid>
+    <ProjectGuid>{E1B5F054-ED84-449C-B1CF-BF923C383F1D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>MyersTriangle.Test</RootNamespace>
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.5.10.11092, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,8 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="TriangleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyersTriangle\MyersTriangle.csproj">
+      <Project>{F3B5A0F7-1164-4BA1-85C9-E844C8AD11CE}</Project>
+      <Name>MyersTriangle</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
